user service
 - utilized my old user service-
 - it uses mongodb though
