# user-service/src/json-schemas/changePasswordRequest.schema.ts
@@ -1,0 +1,16 @@
+export default {
+  $schema: "http://json-schema.org/draft-07/schema#",
+  type: "object",
+  required: ["username", "oldPassword", "newPassword"],
+  properties: {
+    username: {
+      $ref: "./definitions.json#/definitions/Username",
+    },
+    oldPassword: {
+      $ref: "./definitions.json#/definitions/Password",
+    },
+    newPassword: {
+      $ref: "./definitions.json#/definitions/Password",
+    },
+  },
+};
