# user-service/src/json-schemas/registerRequest.schema.ts
@@ -1,0 +1,13 @@
+export default {
+  $schema: "http://json-schema.org/draft-07/schema#",
+  type: "object",
+  required: ["username", "password"],
+  properties: {
+    username: {
+      $ref: "./definitions.json#/definitions/Username",
+    },
+    password: {
+      $ref: "./definitions.json#/definitions/Password",
+    },
+  },
+};
