# user-service/src/models/user.model.ts
@@ -1,0 +1,15 @@
+import mongoose, { Schema, Document, Model } from "mongoose";
+
+interface IUser extends Document {
+  username: string;
+  password: string;
+}
+
+const UserSchema = new Schema<IUser>({
+  username: { type: String, unique: true, required: true },
+  password: { type: String, required: true },
+});
+
+const User: Model<IUser> = mongoose.model<IUser>("User", UserSchema);
+
+export default User;
